--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.0.5",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "bcrypt": "^5.1.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
